modifique color, fuente y alineacion

--- a/Actividad.html
+++ b/Actividad.html
@@ -7,9 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV ANTONELLA ZABAL</title>
 </head>
-
+<style>
+    h1{
+        text-align: center; /*cambie alineacion*/
+    }
+    h2{
+        color: blue; /*cambie color del titulo*/
+        font-family: Arial, Helvetica, sans-serif; /*cambir fuente*/
+    }
+</style>
 <body>
-    <H1>ANTONELLA ZABAL</H1>
+    <H1>ANTONELLA ZABAL</H1> 
 
     <img src="Antonella.jpg" alt="">
 
