--- a/Actividad.html
+++ b/Actividad.html
@@ -6,21 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV ANTONELLA ZABAL</title>
+    <link rel="stylesheet" href="Actividad.css">
 </head>
-<style>
-    h1{
-        text-align: center; /*cambie alineacion*/
-    }
-    h2{
-        color: blue; /*cambie color del titulo*/
-        font-family: Arial, Helvetica, sans-serif; /*cambir fuente*/
-    }
-</style>
+
 <body>
-    <H1>ANTONELLA ZABAL</H1> 
+    <H1>ANTONELLA ZABAL</H1>
 
-    <img src="Antonella.jpg" alt="">
-
+    <center><img src="Antonella.jpg" alt=""></center>
 
     <h2>PERFIL</h2>
     <p>Experiencia como traductora freelance de inglés. Amplio
@@ -34,42 +26,52 @@
         adaptabilidad horaria y predisposición para aprender y colaborar
         en equipos de trabajo.</p>
 
-    <h2>FORMACION</h2>
-    <UL>
-        <Li>2013 Facultad de Lenguas, UNC.
-            Traductora Pública Nacional de
-            Inglés.</Li>
+    <div>
+        <h2>FORMACION</h2>
+        <UL>
+            <Li>2013 Facultad de Lenguas, UNC.
+                Traductora Pública Nacional de
+                Inglés.</Li>
 
-        <LI>2016 Profesora Universitaria para el Tercer
-            Ciclo EGB, Polimodal y Educación
-            Superior, Universidad Católica de
-            Córdoba.</LI>
-    </UL>
-    <H2>EXPERIENCIA LABORAL</H2>
-    <Ul>
-        <LI>2017-2019 Passport Instituto de Idiomas
-            Clases grupales e individuales para Santander
-            Rio, Bolsa de Cereales, BSM y FCA.</LI>
-        <LI>2018-2019 Set Instituto de idiomas
-            Preparación FCE y CAE.</LI>
-        <LI>2017- actualidad British School
-            Clases a niños, adolescentes y adultos y
-            prepración para FCE.</LI>
-        <LI>2019-2020 Extensión Facultad de Lenguas
-            Cursos intensivos
-            Traducciones para ARGA Intercultural</LI>
-    </Ul>
-    <H2>CONTACTO</H2>
-    <UL>
-        <Li>Celular: 351-7048360</Li>
-        <LI>Email: antonellazabal@gmail.com</LI>
-        <LI>DNI: 32062405</LI>
-        <LI> Fecha de nacimiento: 21/02/86</LI>
-        <LI>Domicilio: Obispo Oro 259, Nueva Córdoba.</LI>
-        <LI>Disponibilidad: part-time</LI>
-        <LI>Cuil: 27-32062405-9</LI>
-    </UL>
-    <a href="Actividad2.html" target="_blank" rel="noopener noreferrer">REFERENCIAS</a>
+            <LI>2016 Profesora Universitaria para el Tercer
+                Ciclo EGB, Polimodal y Educación
+                Superior, Universidad Católica de
+                Córdoba.</LI>
+        </UL>
+    </div>
+
+    <div>
+        <H2>EXPERIENCIA LABORAL</H2>
+        <Ul>
+            <LI>2017-2019 Passport Instituto de Idiomas
+                Clases grupales e individuales para Santander
+                Rio, Bolsa de Cereales, BSM y FCA.</LI>
+            <LI>2018-2019 Set Instituto de idiomas
+                Preparación FCE y CAE.</LI>
+            <LI>2017- actualidad British School
+                Clases a niños, adolescentes y adultos y
+                prepración para FCE.</LI>
+            <LI>2019-2020 Extensión Facultad de Lenguas
+                Cursos intensivos
+                Traducciones para ARGA Intercultural</LI>
+        </Ul>
+    </div>
+
+    <div class="contacto">
+        <H2>CONTACTO</H2>
+        <UL>
+            <Li>Celular: 351-7048360</Li>
+            <LI>Email: antonellazabal@gmail.com</LI>
+            <LI>DNI: 32062405</LI>
+            <LI> Fecha de nacimiento: 21/02/86</LI>
+            <LI>Domicilio: Obispo Oro 259, Nueva Córdoba.</LI>
+            <LI>Disponibilidad: part-time</LI>
+            <LI>Cuil: 27-32062405-9</LI>
+        </UL>
+    </div>
+
+    <center><a id="hipervinculo" href="Actividad2.html" target="_blank" rel="noopener noreferrer">REFERENCIAS</a>
+    </center>
 </body>
 
 </html>
